feat(api): semina_info api 생성 - semina 관련 DB 내 정보 요청시 전송 - Sequelize: Image 모델 이름 변경 -> File - Sequelize: Semina 모델 구조 일부 수정 - 설정한 로그만 나오도록 콘솔 로그 변경(mySQL logging 해제)
